--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#333333">
-    <title>Geng Shuang Emulator</title>
+    <title>Geng Shuang Emulator TW</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
     <link href="normalize.css" rel="stylesheet">
     <link href="reset-form.css?v2" rel="stylesheet">
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <h1>Geng Shuang <br/>Emulator</h1>
+    <h1>Geng Shuang <br/>Emulator TW</h1>
     <small class="label" id="label-lang">语言</small>
     <select id="lang" onchange="changeLang(this.value)">
-        <option value="sc">简体</option>
         <option value="tc">繁體</option>
+        <option value="sc">简体</option>
     </select>
     <small class="label" id="label-n">发言对象：</small><input type="text" id="1">
     <small class="label" id="label-b">对方干了什么事情：</small><input type="text" id="2">
