Replace 人民 with textbox

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <small class="label" id="label-b">对方干了什么事情：</small><input type="text" id="2">
     <small class="label" id="label-ourside">我方名稱（替代「中方」）：</small><input type="text" id="ourside">
     <small class="label" id="label-ourstate">我方組織名（替代「中國」/「中國政府」」）：</small><input type="text" id="ourstate">
+    <small class="label" id="label-member">我方組織成員（替代「人民」）：</small><input type="text" id="member">
     <small class="label" id="label-attitude">态度：</small>
     <input type="radio" name ="attitude" id="r1" value="support"><label for="support" id="label-support">支持</label>
     <input type="radio" name ="attitude" id="r2" value="condemn" checked><label for="condemn" id="label-condemn">谴责</label>
