Fix footer and og:meta

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="normalize.css" rel="stylesheet">
     <link href="reset-form.css?v2" rel="stylesheet">
     <link href="base.css?v2" rel="stylesheet">
+    <meta property="og:title" content="Geng Shuang Emulator (台灣在地化版)">
+    <meta property="og:description" content="耿爽發言模擬器台灣在地化版本">
+    <meta property="og:url" content="https://patricks.tw/GengShuangTW">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Geng Shuang Emulator TW">
 </head>
 
 <body>
@@ -33,10 +38,8 @@
         <img class="shuffle clickable" onclick="random()" src="shuffle.svg">
     </div>
     <div id="text"></div>
-    <img class="slogan" src="footer.svg">
-    <p class="about">作者的话：这只是本人一时突发奇想随手写的一个项目而已，没想到居然颇受欢迎。在此感谢所有对项目作出贡献的热心网友。（具体贡献情况可见 Github 页面）</p>
-    <p class="about">另外，欢迎来到<a class="clickable" href="https://pincong.rocks">新品葱</a>论坛（需翻墙），在自由的阳光下各抒己见。</p>
-    <p class="about">本实验不带有政治诉求或企图，请勿过度解读 · <a class="clickable" href="https://github.com/xwgmdjc/GengShuang">View on GitHub</a></p>
+    <p class="about">Localized by Jeremy</p>
+    <p class="about">Project forked from <a class="clickable" target="_blank" href="https://github.com/rogeraabbccdd/GengShuang">rogeraabbccdd/GengShuang</a></p>
     <script src="main.js"></script>
 </body>
 
