Localize random function

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <img class="shuffle clickable" onclick="random()" src="shuffle.svg">
     </div>
     <div id="text"></div>
-    <p class="about">Localized by Jeremy</p>
-    <p class="about">Project forked from <a class="clickable" target="_blank" href="https://github.com/rogeraabbccdd/GengShuang">rogeraabbccdd/GengShuang</a></p>
+    <p class="about"><a href="javascript:void(0)" onclick="random_legacy()" class="clickable">使用原版隨機範例產生器</a></p>
+    <p class="about">Localized by Jeremy / Project forked from <a class="clickable" target="_blank" href="https://github.com/rogeraabbccdd/GengShuang">rogeraabbccdd/GengShuang</a></p>
     <script src="main.js"></script>
 </body>
 
