--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta property="og:url" content="https://patricks.tw/GengShuangTW">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Geng Shuang Emulator TW">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167917290-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-167917290-1');
+    </script>
 </head>
 
 <body>
